--- a/GuiApp/kv/buyScreen.kv
+++ b/GuiApp/kv/buyScreen.kv
@@ -4,13 +4,7 @@
 <BuyScreenContent>:
     cols: 1
     size_hint: (1, 1)
-    padding: '10dp'
-    canvas:
-        Color:
-            rgba: 0.3, 0.3, 0.3, 1
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    padding: ['20dp', '5dp']
     GridLayout:
         rows: 1
         spacing: 30
