--- a/GuiApp/kv/uiElements/buttons.kv
+++ b/GuiApp/kv/uiElements/buttons.kv
@@ -3,8 +3,8 @@
 <ConfirmButton>
     canvas:
         Color:
-            rgba: 0.0, 0.4, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["green_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16
@@ -36,8 +36,8 @@
 <BuyButton>
     canvas:
         Color:
-            rgba: 0.0, 0.4, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["green_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16
@@ -57,8 +57,8 @@
 <CancelButton>
     canvas:
         Color:
-            rgba: 0.5, 0.0, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["orange_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16
@@ -90,8 +90,8 @@
 <CloseButton>:
     canvas:
         Color:
-            rgba: 0.5, 0.0, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["orange_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16
@@ -111,8 +111,8 @@
 <RemoveButton>:
     canvas:
         Color:
-            rgba: 0.9, 0.0, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["red_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16
@@ -132,8 +132,8 @@
 <RegisterButton>:
     canvas:
         Color:
-            rgba: 0.0, 0.4, 0.0, 1
-        RoundedRectangle:
+            rgba: app.colors["green_button"]
+        SmoothRoundedRectangle:
             pos: self.pos
             size: self.size
     text_size: 16        
