--- a/GuiApp/kv/editSummaryPopup.kv
+++ b/GuiApp/kv/editSummaryPopup.kv
@@ -20,8 +20,13 @@
 <EditSummaryPopup>:
     size_hint: (0.4, 0.65)
     auto_dismiss: True
-    title: "Edit summary"
     GridLayout:
+        canvas:
+            Color:
+                rgba: app.colors["secondary_background"]
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
         cols: 1
         padding: '10dp'
         spacing: '10dp'
