--- a/GuiApp/kv/loginScreen.kv
+++ b/GuiApp/kv/loginScreen.kv
@@ -1,16 +1,33 @@
-#:kivy 2.1.0     
+#:kivy 2.1.0
 
 <LoginScreenUserWidget>:
     size_hint: None, None
     height: '120dp'
     width: '120dp'
     on_press: root.Clicked()
-    canvas:
+    canvas.before:
         Color:
-            rgba: .8, .8, .8, 1
-        Rectangle:
+            rgba: 0, 0, 0, 0.10
+        BoxShadow:
             pos: self.pos
             size: self.size
+            offset: 10, -10
+            blur_radius: 15
+            spread_radius: -5, -5
+            border_radius: 10, 10, 10, 10
+    canvas:
+        Color:
+            rgba: (1, 1, 1, 1)
+        SmoothRoundedRectangle:
+            pos: self.pos
+            size: self.size
+        Color:
+            rgba: app.colors["button"]
+        SmoothRoundedRectangle:
+            pos: (self.pos[0] + 5, self.pos[1] + 5)
+            size: (self.width - 10, self.height - 10)
+        
+    
     Label:
         id: userNameLabel
         text: 'User'
@@ -25,51 +42,76 @@
 <LoginScreen>:
     GridLayout:
         cols: 1
-        padding: [0, 40, 0, 0]
-        Label:
-            halign: 'center'
-            size_hint: (1, None)
-            height: 33
-            font_size: 32
-            color: 'white'
-            bold: True
-            text: "Select or create user"
-        AnchorLayout:
-            anchor_x: 'center'
-            anchor_y: 'center'
-            size_hint: 1, 0.7
-            ScrollView:
-                id: scrollView
-                size_hint: 1, None
-                size_hint_min_x: 1
-                height: '130dp'
-                do_scroll_y: False
-                GridLayout:
-                    id: LoginScreenUserGridLayout
-                    rows: 1
-                    spacing: 30
-                    padding: [30, 0]
-                    size_hint_x: None
-                    width: self.minimum_width
-                        
-        AnchorLayout:
-            size_hint: 1, 0.3
-            anchor_x: 'center'
-            anchor_y: 'center'
-            BoxLayoutButton:
-                on_press: root.createNewUserButtonClicked()
-                size_hint: None, None
-                height: '50dp'
-                width: '240dp'
-                canvas:
-                    Color:
-                        rgba: 0.7, 0.7, 0.7, 1
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size    
-                Label:
-                    id: manageDeviceCancelLabel
-                    text: 'Create new user'
-                    bold: True
-                    font_size: "30sp"
-                    size_hint: (1, 1)
+        canvas:
+            Color:
+                rgba: app.colors["background"]
+            Rectangle:
+                pos: self.pos
+                size: self.size
+        GridLayout:
+            cols: 1
+            padding: [0, 40, 0, 0]
+            Label:
+                halign: 'center'
+                size_hint: (1, None)
+                height: 33
+                font_size: 32
+                color: 'black'
+                bold: True
+                text: "Select or create user"
+            AnchorLayout:
+                anchor_x: 'center'
+                anchor_y: 'center'
+                size_hint: 1, 0.7
+                ScrollView:
+                    id: scrollView
+                    size_hint: 1, None
+                    size_hint_min_x: 1
+                    height: '160dp'
+                    do_scroll_y: False
+                    GridLayout:
+                        id: LoginScreenUserGridLayout
+                        rows: 1
+                        spacing: 30
+                        padding: [30, 10]
+                        size_hint_x: None
+                        width: self.minimum_width
+                            
+            AnchorLayout:
+                size_hint: 1, 0.3
+                anchor_x: 'center'
+                anchor_y: 'center'
+                BoxLayoutButton:
+                    canvas:
+                        Color:
+                            rgba: (1, 1, 1, 1)
+                        SmoothRoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                        Color:
+                            rgba: app.colors["button"]
+                        SmoothRoundedRectangle:
+                            pos: (self.pos[0] + 5, self.pos[1] + 5)
+                            size: (self.width - 10, self.height - 10)
+                    canvas.before:
+                        Color:
+                            rgba: 0, 0, 0, 0.10
+                        BoxShadow:
+                            pos: self.pos
+                            size: self.size
+                            offset: 10, -10
+                            blur_radius: 15
+                            spread_radius: -5, -5
+                            border_radius: 2, 2, 2, 2
+                    on_press: root.createNewUserButtonClicked()
+                    size_hint: None, None
+                    height: '50dp'
+                    width: '240dp'
+                      
+                    Label:
+                        id: manageDeviceCancelLabel
+                        text: 'Create new user'
+                        bold: True
+                        color: 'black'
+                        font_size: "30sp"
+                        size_hint: (1, 1)
