--- a/GuiApp/kv/mainUserScreen.kv
+++ b/GuiApp/kv/mainUserScreen.kv
@@ -6,12 +6,27 @@
     spacing: 30
     BoxLayoutButton:
         on_press: root.onBuyButtonPressed()
-        canvas:
+        canvas.before:
             Color:
-                rgba: 0.2, 0.2, 0.2, 1
-            RoundedRectangle:
+                rgba: 0, 0, 0, 0.10
+            BoxShadow:
                 pos: self.pos
                 size: self.size
+                offset: 10, -10
+                blur_radius: 15
+                spread_radius: -5, -5
+                border_radius: 10, 10, 10, 10
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 1)
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
+            Color:
+                rgba: app.colors["button"]
+            SmoothRoundedRectangle:
+                pos: (self.pos[0] + 5, self.pos[1] + 5)
+                size: (self.width - 10, self.height - 10)
         GridLayout:
             cols: 1
             padding: [0, 90]
@@ -30,12 +45,27 @@
                 height: 30
     BoxLayoutButton:
         on_press: root.onTopUpButtonPressed()
-        canvas:
+        canvas.before:
             Color:
-                rgba: 0.2, 0.2, 0.2, 1
-            RoundedRectangle:
+                rgba: 0, 0, 0, 0.10
+            BoxShadow:
                 pos: self.pos
                 size: self.size
+                offset: 10, -10
+                blur_radius: 15
+                spread_radius: -5, -5
+                border_radius: 10, 10, 10, 10
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 1)
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
+            Color:
+                rgba: app.colors["button"]
+            SmoothRoundedRectangle:
+                pos: (self.pos[0] + 5, self.pos[1] + 5)
+                size: (self.width - 10, self.height - 10)
         
         GridLayout:
             cols: 1
@@ -55,12 +85,27 @@
                 height: 30
     BoxLayoutButton:
         on_press: root.onHistoryButtonPressed()
-        canvas:
+        canvas.before:
             Color:
-                rgba: 0.2, 0.2, 0.2, 1
-            RoundedRectangle:
+                rgba: 0, 0, 0, 0.10
+            BoxShadow:
                 pos: self.pos
                 size: self.size
+                offset: 10, -10
+                blur_radius: 15
+                spread_radius: -5, -5
+                border_radius: 10, 10, 10, 10
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 1)
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
+            Color:
+                rgba: app.colors["button"]
+            SmoothRoundedRectangle:
+                pos: (self.pos[0] + 5, self.pos[1] + 5)
+                size: (self.width - 10, self.height - 10)
         
         GridLayout:
             cols: 1
