--- a/GuiApp/kv/purchaseCompletedPopup.kv
+++ b/GuiApp/kv/purchaseCompletedPopup.kv
@@ -1,36 +1,34 @@
 #:kivy 2.1.0     
 
 <PurchaseCompletedPopup>:
-    size_hint: (0.8, 0.8)
+    size_hint: (0.8, 0.5)
     auto_dismiss: True
-    title: "Purchase complete"
-
     GridLayout:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 1)
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
+            Color:
+                rgba: app.colors["button"]
+            SmoothRoundedRectangle:
+                pos: (self.pos[0] + 5, self.pos[1] + 5)
+                size: (self.width - 10, self.height - 10)
         center_x: True
         cols: 1
         size_hint: (1, 1)
-        canvas:
-            Color:
-                rgba: 0, 0.3, 0, 1
-            Rectangle:
-                pos: self.pos
-                size: self.size
         BoxLayout:
             orientation: "vertical"
             size_hint: (1, .9)
-            canvas:
-                Color:
-                    rgba: 0.1, 0.1, 0.1, 1
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
             Label:
                 text_size: self.size
                 padding: 10
                 halign: 'center'
                 valign: 'middle'
                 font_size: 42
-                text: 'Thank you for your purchase.'
+                bold: True
+                text: 'Thank you for your purchase!'
                 
             Label:
                 id: creditsLabel
@@ -39,4 +37,5 @@
                 halign: 'center'
                 valign: 'middle'
                 font_size: 32
+                bold: True
                 text: 'Your credits: ??'
