--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -5,9 +5,30 @@
     padding: 30
     spacing: 30
     GridLayout:
+        canvas.before:
+            Color:
+                rgba: 0, 0, 0, 0.10
+            BoxShadow:
+                pos: self.pos
+                size: self.size
+                offset: 10, -10
+                blur_radius: 15
+                spread_radius: -5, -5
+                border_radius: 10, 10, 10, 10
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 1)
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
+            Color:
+                rgba: app.colors["button"]
+            SmoothRoundedRectangle:
+                pos: (self.pos[0] + 5, self.pos[1] + 5)
+                size: (self.width - 10, self.height - 10)
         rows: 1
         size_hint: (1, 0.5)
-        padding: [40, 0, 40, 60]
+        padding: [40, 30, 40, 40]
         GridLayout:
             cols: 1
             Label:
