--- a/GuiApp/kv/topUpSummaryPopup.kv
+++ b/GuiApp/kv/topUpSummaryPopup.kv
@@ -20,11 +20,16 @@
 <TopUpSummaryPopup>:
     size_hint: (0.4, 0.65)
     auto_dismiss: True
-    title: "Top-up summary"
     GridLayout:
         cols: 1
         padding: '10dp'
         spacing: '10dp'
+        canvas:
+            Color:
+                rgba: app.colors["secondary_background"]
+            SmoothRoundedRectangle:
+                pos: self.pos
+                size: self.size
         GridLayout:
             cols: 1
             padding: [5, 0, 5, 0]
