--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -11,6 +11,7 @@
 #:include kv/editSnacksScreen.kv
 #:include kv/headerBodyLayout.kv
 #:include kv/editUsersScreen.kv
+#:include kv/registerCardIdScreen.kv
 #:include kv/addSnackScreen.kv
 #:include kv/topUpAmountScreen.kv
 #:include kv/topUpPaymentScreen.kv
