Create scrolling table columns

--- a/GuiApp/kv/buyScreen.kv
+++ b/GuiApp/kv/buyScreen.kv
@@ -15,7 +15,8 @@
             Label:
                 text_size: self.size
                 size_hint_y: None
-                height: 20
+                height: 24
+                font_size: '22dp'
                 text: "Inventory"
                 bold: True
         GridLayout:
@@ -25,7 +26,8 @@
             Label:
                 text_size: self.size
                 size_hint_y: None
-                height: 20
+                height: 24
+                font_size: '22dp'
                 text: "Shopping cart"
                 bold: True
     GridLayout:
