--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -26,3 +26,4 @@
 #:include kv/uiElements/buttons.kv
 #:include kv/uiElements/textInputs.kv
 #:include kv/editSystemSettingsScreen.kv
+#:include kv/setTimePopup.kv
