--- a/GuiApp/kv/aboutPopup.kv
+++ b/GuiApp/kv/aboutPopup.kv
@@ -34,7 +34,7 @@
                 markup: True
                 halign: 'center'
                 valign: 'middle'
-                text: '[b]Contributors[/b] \nDouglas Halse - Haver of ideas \nPhilip Tekin - Script maintainer \nBrijesh Thummar - Markdown and code improvements \nDiana Panko Slobodyanyuk - Graphical engineer'     
+                text: '[b]Contributors[/b] \nDouglas Halse - Haver of ideas \nPhilip Tekin - Script maintainer \nBrijesh Thummar - Markdown and code improvements \nDiana Panko Slobodyanyuk - Graphical engineer\nElvira Rodrigues Baidez - Hardware RnD lead'     
             BoxLayoutButton:
                 size_hint: (None, None)
                 height: '30dp'
