--- a/GuiApp/kv/clickableTable.kv
+++ b/GuiApp/kv/clickableTable.kv
@@ -10,31 +10,20 @@
 <ClickableTableColumnEntryLabel>:
     rows: 1
     id: entry
-    ScrollView:
-        id: scrollView
-        size_hint_y: None
-        height: '50dp'
-        do_scroll_y: False
-        bar_color: [0, 0, 0, 0]
-        bar_width: 0
-        scroll_type: ['bars']
-        GridLayout:
-            id: scrollViewLayout
-            rows: 1
+    StencilView:
+        Label:
+            id: entryLabel
+            text: 'ENTRY NAME'
             size_hint_x: None
-            width: self.minimum_width
-            Label:
-                id: entryLabel
-                text: 'ENTRY NAME'
-                size_hint_x: None
-                size_hint_y: None
-                height: '50dp'
-                width: max(self.texture_size[0], entry.width)
-                markup: True
-                font_size: '22dp'
-                bold: True
-                halign: "center"
-                valign: 'middle'
+            size_hint_y: None
+            height: '50dp'
+            width: entry.width
+            pos: entry.pos
+            markup: True
+            font_size: '22dp'
+            bold: True
+            halign: "left"
+            valign: 'middle'
 
 <ClickableTableEntry>:
     rows: 1
