Make logout button smooth

--- a/GuiApp/kv/headerBodyLayout.kv
+++ b/GuiApp/kv/headerBodyLayout.kv
@@ -59,7 +59,7 @@
                 canvas:
                     Color:
                         rgba: app.colors["red_button"]
-                    RoundedRectangle:
+                    SmoothRoundedRectangle:
                         pos: self.pos
                         size: self.size
                 Label:
